# transduction

./: .gitmodules  CMakeLists.txt
include/: Transduction.h  ttman.h
lib/: CMakeLists.txt
src/: Transduction.cpp  TransductionCspf.cpp  TransductionMergeDecompose.cpp  TransductionMiaig.cpp  TransductionMspf.cpp  TransductionResub.cpp  TransductionScript.cpp  ttman.cpp
test/: main.cpp  rantra.cpp  tra.cpp
